# qwbSfwVEyB

./: .gitignore  LICENSE  README.md
deployment/: Makefile  build.sh  docker-compose.yaml
docs/: 11_risks_and_technical_debt.md  1_introduction_and_goals.md  2_constraints.md  3_context_and_scope.md  4_solution_strategy.md  6_runtime_view.md  7_deployment_view.md  9_architecture_decisions.md  README.md
docs/assets/: context.drawio
integration/: Dockerfile  Makefile  pyproject.toml
integration/src/: authors_test.py  books_test.py  borrowers_test.py  conftest.py
manager/: .golangci.yaml  Dockerfile  Makefile  go.mod  go.sum
manager/api/spec/: api.yaml
manager/cmd/: main.go
manager/cmd/config/: config.go
manager/cmd/setup/: config.go  database.go  logger.go  middleware.go  router.go  routes.go  service.go
manager/db-migrations/: README.md  migration.go
manager/db-migrations/db/migrations/: 20250418081025_init.sql
manager/internal/api/authors/: authors.go  authors_test.go  models_input.go  models_output.go
manager/internal/api/books/: books.go  books_test.go  models_input.go  models_output.go
manager/internal/api/borrowers/: borrowers.go  borrowers_test.go  models_input.go  models_output.go
manager/internal/repository/: authors.go  books.go  borrowers.go  errors.go  models.go  repository.go
manager/internal/repository/dbmodels/: author.go  book.go  borrower.go
manager/internal/service/: authors.go  authors_test.go  books.go  books_test.go  borrowers.go  borrowers_test.go  errors.go
manager/internal/util/: conversion.go
(+6 files in other folders)
